--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
   <!-- 嵌入 GitHub Pages 頁面 -->
-  <iframe src="https://lilliana0843.github.io/0001/"
-          width="100%" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://lilliana0843.github.io/0001/" frameborder="0" allowfullscreen width="100%" height="500px"></iframe>
+
 
 </body>
 </html>
