--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- 嵌入 GitHub Pages 頁面 -->
-<iframe src="https://lilliana0843.github.io/0001/" frameborder="0" allowfullscreen width="100%" height="500px"></iframe>
+<iframe src="https://lilliana0843.github.io/0001/" frameborder="0" allowfullscreen width="100%" height="100%"></iframe>
 
 
 </body>
